--- a/JobComing/WebContent/css/styles.css
+++ b/JobComing/WebContent/css/styles.css
@@ -1,8 +1,5 @@
 * { margin: 0px; padding: 0px; }
-body {
-	background: #f0f1f2;
-	font:12px "Open Sans", sans-serif; 
-}
+
 #view-code{
   color:#89a2b5;    
   opacity:0.7;
@@ -22,9 +19,11 @@ body {
 	overflow:hidden;
 	height:484px;
 	position:absolute;
-	top:200px;
-	left:50%;
-	margin-left:-155px;
+	right:20px;
+	bottom:20px;
+	box-shadow:0px 0px 3px 3px grey;
+	border:1px solid grey;
+	display:none;
 }
 
 #friendslist{
