--- a/JobComing/WebContent/css/main.css
+++ b/JobComing/WebContent/css/main.css
@@ -187,3 +187,30 @@ a .caret{
 	font-size: 12px;
 	color: #555 ;
 }
+#hide-info{
+	width: 100%;
+	height: auto;
+	position: absolute;
+	top: 52px;
+	left: 0px;
+	z-index: 9999;
+	background: white;
+	border: 2px solid #27AE60;
+	border-top: 0px;
+	display: none;
+}
+#hide-info li{
+	color: #999;
+	padding: 0px;
+}
+#hide-info li a{
+	width: 100%;
+	height: 100%;
+	display: block;
+	padding: 8px;
+}
+#hide-info li a:hover{
+	color: #00b38a;
+	background: #f5f5f5;
+
+}
