--- a/JobComing/WebContent/css/styles.css
+++ b/JobComing/WebContent/css/styles.css
@@ -24,6 +24,7 @@
 	box-shadow:0px 0px 3px 3px grey;
 	border:1px solid grey;
 	display:none;
+	
 }
 
 #friendslist{
@@ -50,7 +51,7 @@
 #topmenu span.history{background-position:-190px 24px; cursor:pointer;}
 #topmenu span.history:hover{background-position:-190px -47px; cursor:pointer;}
 .friend{
-	height:70px;
+	height:71px;
 	border-bottom:1px solid #e7ebee;		
 	position:relative;
 }
@@ -124,8 +125,8 @@
 	width:290px;
 	height:484px;
 	position:absolute;
-	top:0;
-	left:0;	
+	bottom:20px;
+	right:20px;
 	display:none;
 	background:#fff;
 }
@@ -279,7 +280,7 @@ div.message.right .corner{
 }
 #sendmessage button{
 	background:#fff url("../img/send.png") 0 -41px no-repeat;
-	width:30px;
+	width:35px;
 	height:30px;
 	position:absolute;
 	right: 15px;
@@ -380,4 +381,14 @@ div.message.right .corner{
 #chatview, #sendmessage { 
 overflow:hidden; 
 border-radius:6px; 
+}
+
+#chatbox-top{
+	width:100%;
+	height:40px;
+	border-bottom:1px solid #ccc;
+	
+}
+#home-template{
+	over-flow:hidden;
 }
